<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:background="@color/white"
    tools:context=".presentation.DetailedRecipeActivity">

    <RelativeLayout
        android:id="@+id/recipe_card_layout"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@color/header_footer_background">

        <TextView
            android:id="@+id/recipe_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"

            android:maxEms="16"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/recipe_card_name_placeholder"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/estimated_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/recipe_name"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/time"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/estimated_time"
            android:layout_marginStart="20dp"
            android:text="@string/difficulty"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/taste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/difficulty"
            android:layout_marginStart="20dp"
            android:text="@string/taste"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/taste"
            android:layout_marginStart="20dp"
            android:text="@string/rating"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/delete_recipe"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="5dp"
            android:onClick="deleteClicked"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:theme="@style/buttonAltRedTheme" />

        <Button
            android:id="@+id/edit_recipe"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/delete_recipe"
            android:onClick="editClicked"
            android:text="@string/edit"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:theme="@style/buttonPastelGreenTheme" />

    </RelativeLayout>

    <TextView
        android:id="@+id/text_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/recipe_card_layout"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="70dp"
        android:gravity="start"
        android:includeFontPadding="false"
        android:text="@string/ingredients"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />


    <ListView
        android:id="@+id/ingredients_list"
        android:layout_width="match_parent"
        android:layout_height="510dp"
        android:layout_below="@id/recipe_card_layout"
        android:layout_marginTop="77dp"
        android:background="@color/white"
        android:divider="@null" />

    <Spinner
        android:id="@+id/serving_num"
        android:layout_width="130dp"
        android:layout_height="35dp"
        android:layout_below="@id/recipe_card_layout"
        android:layout_alignEnd="@+id/text_ingredients"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="67dp"

        android:background="@color/header_footer_background"
        android:gravity="center"
        android:theme="@style/spinnerTheme" />

    <Button
        android:id="@+id/start_cooking"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_below="@+id/ingredients_list"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_button"
        android:text="@string/instructions"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:theme="@style/buttonGreenTheme" />

</RelativeLayout>