<resources>
    <string name="app_name">Little Chef</string>
    <string name="recipes_button">Recipes</string>
    <string name="suggest_recipes_button">Suggest Recipes</string>
    <string name="add_recipe_button">Add Recipe</string>
    <string name="recipe_card_name_placeholder">Recipe Name</string>
    <string name="time">Estimated Time:</string>
    <string name="difficulty">Difficulty:</string>
    <string name="taste">Taste:</string>
    <string name="rating">5/5</string>
    <string name="warning">Warning</string>
    <string name="fatalError">Fatal error</string>
    <string name="detailed_view">View Recipe</string>
    <string name="ingredients">Ingredients</string>
    <string name="ingredient">Ingredient</string>
    <string name="measurement">Measurement</string>
    <string name="serving">serving</string>
    <string name="instructions">Instructions</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="reset">RESET</string>
    <string name="sub_instruction">Sub-Instruction</string>
    <string name="number">1.</string>
    <string name="timer_default">00:00:00</string>
    <string name="finish">Finish</string>
    <string name="cooked_meal">Congratulations\nYou just cooked another meal!</string>
    <string name="submit">Submit</string>
    <string name="five_rating_description">5 = Better than\nexpected</string>
    <string name="three_rating_description">3 = Meets\nexpectations</string>
    <string name="one_rating_description">1 = Worse than\nexpected</string>
    <string name="expectations_rating">Did this meal meet your expectations?</string>
    <string name="rate_prompt">Please take a second to rate how great of a job \nyou did in cooking this meal!</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="save_changes">Save changes</string>
    <string name="one_serving_edit">1 Serving</string>
    <string name="cancel">cancel</string>
    <string name="amount">Amount</string>
    <string name="unit">Unit</string>
    <string name="next">Next</string>
    <string name="plus_sign">+</string>
    <string name="x_sign">✕</string>

    <string-array name="serving_sizes">
        <item>1 serving</item>
        <item>2 servings</item>
        <item>3 servings</item>
        <item>4 servings</item>
        <item>5 servings</item>
        <item>6 servings</item>
        <item>7 servings</item>
    </string-array>

    <string-array name="units">

        <item>QUANTITY</item>
        <item>PINCH</item>
        <item>TSP</item>
        <item>TBSP</item>
        <item>CUP</item>
        <item>ML</item>
        <item>L</item>
        <item>MG</item>
        <item>G</item>
        <item>KG</item>
        <item>MM</item>
        <item>CM</item>
        <item>M</item>

    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="forwrd"><![CDATA[->]]></string>
    <string name="forward"><![CDATA[->]]></string>
</resources>