<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:background="@color/white"
    tools:context=".presentation.DetailedRecipeActivity">

    <RelativeLayout
        android:id="@+id/recipe_card_layout"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@color/header_footer_background">

        <EditText
            android:id="@+id/recipe_name_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:ems="14"
            android:gravity="center"
            android:inputType="textNoSuggestions"
            android:text="@string/recipe_card_name_placeholder"

            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/estimated_time_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/recipe_name_edit"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:text="@string/time"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/difficulty_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/estimated_time_edit"
            android:layout_marginStart="20dp"
            android:text="@string/difficulty"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/taste_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/difficulty_edit"
            android:layout_marginStart="20dp"
            android:text="@string/taste"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/rating_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/taste_edit"
            android:layout_marginStart="20dp"
            android:text="@string/rating"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/text_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/recipe_card_layout"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="70dp"
        android:gravity="start"
        android:includeFontPadding="false"
        android:text="@string/ingredients"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />


    <ListView
        android:id="@+id/ingredients_list_edit"
        android:layout_width="match_parent"
        android:layout_height="510dp"
        android:layout_below="@id/recipe_card_layout"
        android:layout_marginTop="68dp"
        android:background="@color/white"
        android:divider="@null" />

    <Button
        android:id="@+id/add_ingredient_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/recipe_card_layout"
        android:layout_marginTop="9dp"
        android:layout_toEndOf="@+id/text_ingredients"
        android:gravity="center"
        android:text="@string/plus_sign"
        android:textColor="@color/pastel_green"
        android:textSize="35sp"
        android:textStyle="bold"
        android:theme="@style/buttonWhiteTheme" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_below="@+id/ingredients_list_edit"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round_button"
        android:text="@string/next"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:theme="@style/buttonGreenTheme" />

</RelativeLayout>